--- a/src/scss/utils/base.scss
+++ b/src/scss/utils/base.scss
@@ -1,5 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+@import './variables.scss';
 
 body {
     font-family: "Roboto", serif;
+
+    &::-webkit-scrollbar {
+        background-color: $bg-color;
+        width: 5px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: $text-color;
+    }
+}
+
+ul {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
 }
